# ipswdl2

./: Cargo.toml  LICENSE-APACHE  README.md
ipswdl2/: Cargo.toml
ipswdl2/src/: api_json_types.rs  client.rs  downloader.rs  main.rs
