[package]
name = "ipswdl2"
version = "0.1.0"
authors = ["Andrew Ealovega <Andrew@Ealovega.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["json", "stream"]}
futures = "0.3.15"
tokio = { version = "1.6.0", features = ["full", "macros"]}
bytes = "1.0.1"
chrono = {version = "0.4.19", features = ["serde"]}
ctrlc = "3.1.9"

log = "0.4.14"
